cmake_minimum_required(VERSION 3.10)
project (maap_test)
enable_testing()

set (CPPUTEST_DIR "${CMAKE_CURRENT_LIST_DIR}/../../../thirdparty/cpputest" )
set (SRC_DIR "../common" )
set (TEST_DIR "../test" )
add_definitions(-DMRP_CPPUTEST)

include_directories( . "${CMAKE_CURRENT_LIST_DIR}/../common/" ${CPPUTEST_DIR}/include )
file(GLOB CPPUTEST_SRC *.cpp)
file(GLOB MAAP_SRC ${SRC_DIR}/intervals.c ${SRC_DIR}/maap.c ${SRC_DIR}/maap_log_queue.c ${SRC_DIR}/maap_net.c ${SRC_DIR}/maap_packet.c ${SRC_DIR}/maap_parse.c)
file(GLOB MAAP_TEST_SRC ${TEST_DIR}/maap_log_dummy.c ${TEST_DIR}/maap_timer_dummy.c)

if(APPLE)
  include_directories( include ${SRC_DIR} ${CPPUTEST_DIR}/include/Platforms/Gcc )
  link_directories(${CPPUTEST_DIR}/src/CppUTest ${CPPUTEST_DIR}/src/CppUTestExt )
  add_executable (maap_test ${MAAP_SRC} ${MAAP_TEST_SRC} ${CPPUTEST_SRC} )
  target_link_libraries(maap_test CppUTest CppUTestExt)
elseif(UNIX)
  include_directories( include ${SRC_DIR} ${CPPUTEST_DIR}/include/Platforms/Gcc )
  link_directories(${CPPUTEST_DIR}/src/CppUTest ${CPPUTEST_DIR}/src/CppUTestExt )
  add_executable (maap_test ${MAAP_SRC} ${MAAP_TEST_SRC} ${CPPUTEST_SRC} )
  target_link_libraries(maap_test CppUTest CppUTestExt)
elseif(WIN32)
  # Flexible PCAP library detection - supports both WinPcap and Npcap
  if(DEFINED ENV{WPCAP_DIR})
    set(PCAP_ROOT $ENV{WPCAP_DIR})
    message(STATUS "MAAP Tests: Using WinPcap from: ${PCAP_ROOT}")
  elseif(DEFINED ENV{NPCAP_SDK_DIR})
    set(PCAP_ROOT $ENV{NPCAP_SDK_DIR})
    message(STATUS "MAAP Tests: Using Npcap SDK from: ${PCAP_ROOT}")
  else()
    message(STATUS "MAAP Tests: No PCAP library configured (WPCAP_DIR or NPCAP_SDK_DIR not set)")
    set(PCAP_ROOT "")
  endif()

  if(PCAP_ROOT)
    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
      link_directories(${PCAP_ROOT}/Lib/x64 ${CPPUTEST_DIR}/src/CppUTest ${CPPUTEST_DIR}/src/CppUTestExt)
      message(STATUS "MAAP Tests: Using 64-bit PCAP libraries from: ${PCAP_ROOT}/Lib/x64")
    else()
      link_directories(${PCAP_ROOT}/Lib ${CPPUTEST_DIR}/src/CppUTest ${CPPUTEST_DIR}/src/CppUTestExt)
      message(STATUS "MAAP Tests: Using 32-bit PCAP libraries from: ${PCAP_ROOT}/Lib")
    endif()
  else()
    link_directories(${CPPUTEST_DIR}/src/CppUTest ${CPPUTEST_DIR}/src/CppUTestExt)
  endif()

  add_definitions(-D_CRT_SECURE_NO_WARNINGS)
  add_executable(maap_test ${MAAP_SRC} ${MAAP_TEST_SRC} ${CPPUTEST_SRC})
  target_link_libraries(maap_test CppUTest CppUTestExt Ws2_32 Winmm)
endif()

add_test( maap_test maap_test )

